--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.022);
-  background-color: #b4e2d2;
+  background-color: #edf0ef;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -64,6 +64,6 @@ button:focus-visible {
     color: #747bff;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: #f9f9f900;
   }
 }
