--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.022);
-  background-color: #edf0ef;
+  color: rgba(255, 255, 255, 0.87);
+  background-color: #e9e2e52f;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -64,6 +64,6 @@ button:focus-visible {
     color: #747bff;
   }
   button {
-    background-color: #f9f9f900;
+    background-color: #f9f9f9;
   }
 }
